--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
     <link rel="stylesheet" href="./style.css">
     <script type="text/javascript" src="form.js"></script>
-    <link rel="iconpage" href="./assets/img/ícone.png">
-
+    <link rel="sortcut icon" href="./assets/img/favicon_created_by_logaster.ico" type="image/x-icon" />
 </head>
 
 <body>
